Very last updates to the 2.8.6 release notes. Added bugs 5963073 and 6341529, based on r1803 and comparing it to r1823.
Ondra has argued that "Bug ID b/6341529 should not really be used
since it's applicable only to [one customer], we should be using
b/5923376 instead."

That doesn't seem to be true, given the changes and references in the
bugs and r1803. b/6341529 refers to issues with cyclic groups, and
b/5923376 is a problem with different groups sharing a CN. Revision
r1803 fixes the issue with cyclic groups in the legacy LDAP code, but
cites b/6341529, and b/5923376 makes no mention of cyclic groups.

Code review: https://codereview.appspot.com/6851075

--- a/projects/sharepoint/RELEASE_NOTES
+++ b/projects/sharepoint/RELEASE_NOTES
@@ -510,8 +510,10 @@ This patch contains fix for the following issues.
 --Issue 5549668 SharePoint connector should correctly resolve user's primary group
 --Issue 5596005 SharePoint connector should correctly resolve the user's special group 'NT AUTHORITY\authenticated users'
 --Issue 5883396 Direct user membership of SharePoint groups is not working
---Issue 5923376 SharePoint Connector goes into infinite loop and encounters StackOverflowError upon resolving parent groups during Group Resolution
+--Issue 5923376 SharePoint Connector goes into infinite loop and encounters StackOverflowError resolving groups with the same CN but different DNs
+--Issue 5963073 Sharepoint connector doesn't differentiate between commonName, sAMAccountName and user userPrincipalName
 --Issue 6253811 List items with "ows__ModerationStatus" attribute is always marked as unpublished document and not properly fed.
+--Issue 6341529 SharePoint Connector goes into infinite loop and encounters StackOverflowError with cyclically nested groups.
 
 Version Compatibility
 ---------------------
