--- a/projects/adgroups/RELEASE_NOTES
+++ b/projects/adgroups/RELEASE_NOTES
@@ -10,6 +10,62 @@ main documentation.
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
 
+Release 3.0.6, Mar 27, 2013
+===========================
+
+Introduction
+------------
+This is a maintenance release that improves quality without adding any
+new functionality. Users of previous releases are strongly encouraged to
+upgrade.
+
+This connector replaces functionality previously provided by the
+SharePoint connector. This connector can be used automatically in
+conjunction with the SharePoint connector as a drop-in replacement for
+the previous functionality, or used separately with other connectors
+or content sources.
+
+Summary of Changes
+------------------
+This release contains fixes for the following issues:
+
+--Issue 8186608: AD groups connector fails to start traversal and logs a
+                 NumberFormatException.
+
+--Issue 8147631: Groups with more than 1500 members are not indexed correctly.
+
+--Issue 8008783: AD groups connector should correctly handle user being
+                 member of a group multiple times.
+
+--Issue 7999188: AD groups connector fails processing of mangled foreign
+                 security principals.
+
+--Issue 7982547: AD groups connector's group lookup can be very slow for
+                 complex AD environment.
+
+--Issue 7891660: Authentication with the AD groups connector takes over
+                 a minute.
+
+--Issue 7611784: Timeout while retrieving nETBIOSName.
+
+--Issue 7431494: Group resolution is blocked until domain traversal finishes.
+
+--Issue 7008307: Gracefully handle users that are deleted and recreated again.
+
+Version Compatibility
+---------------------
+Connector instances created using versions 3.0.0 and 3.0.4 may be used
+with this version. This version works with Connector Manager version
+3.0.0 and above. Versions lower than 3.0.0 of the Connector Manager
+will not work correctly with this version of the connector.
+
+For optimal performance, if you are upgrading from a previous 3.0.x
+version, Google recommends dropping the database tables and resetting the
+traversal for your connector instances after the upgrade. When using the
+default H2 database, you can simply delete the connector_manager.h2.db
+file under Tomcat/webapps/connector-manager/WEB-INF/connector_manager.db
+while Tomcat is stopped.
+
 Release 3.0.4, Nov 19, 2012
 ===========================
 
