SharePoint and AD groups connector 3.0.8 release notes.
Code review: https://codereview.appspot.com/9687047/

--- a/projects/sharepoint/RELEASE_NOTES
+++ b/projects/sharepoint/RELEASE_NOTES
@@ -9,6 +9,98 @@ The following sections describe the release in detail and provide information th
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
 
+Release 3.0.8, May 31, 2013
+===========================
+
+Introduction
+------------
+This is a maintenance release that improves quality without adding any
+new functionality. Users of previous releases are encouraged to
+upgrade. Users of previous releases should check the "Version
+Compatibility" section below for instructions on how to use existing
+data with this new release.
+
+Summary of Changes
+------------------
+For a summary of the new features, see the Guide to Release 3.0:
+
+http://www.google.com/support/enterprise/static/gsa/docs/admin/connector_30/sharepoint_guide/
+
+Java SE 5.0 is no longer supported. Java 6 or later is required.
+
+This release contains fixes for the following issues:
+
+--Issue 9107003 Error parsing extra IDs leads to failure when saving the
+                checkpoint, leading to a loop indexing the same documents
+                repeatedly.
+
+--Issue 8625891 SharePoint authorization fails on lowercase attachment URLs.
+
+--Issue 8347700 SharePoint Connector should selectively re-initialize
+                HttpClient object on 401 response from SharePoint Server.
+                Previously, a new HttpClient object was always used, which
+                could leave too many open connections to IIS.
+
+--Issue 8347290 SharePoint Connector should explicitly release HTTP
+                connections used for downloading document contents.
+                Previously, in some IIS configurations this could leave too
+                many open connections to IIS.
+
+--Issue 8214369 Overflow documents are indexed without ACLs. In some
+                situations, documents could be indexed without ACLs, based
+                on the batch size rather than a failure on a specific
+                document.
+
+--Issue 6513771 java.io.IOException: Attempted read on closed stream. This
+                error could occur if documents were processed twice due to
+                errors saving the checkpoint, such as issue 9107003.
+
+Version Compatibility
+---------------------
+This version works with Connector Manager version 3.0.4 and above. Versions
+lower than 3.0.4 of the Connector Manager will not work correctly with this
+version of the connector. Connectors with version 2.4.0 and above can be
+safely upgraded using the steps given below.
+
+This version works with Google Services for SharePoint 3.0.6. Versions
+lower than 3.0.6 of Google Services for SharePoint will not work
+correctly with this version of the connector.
+
+Google strongly recommends reindexing your SharePoint content when
+upgrading to 3.0, due to changes in the ACL structures in the connector,
+feeds, and GSA index, and corresponding changes in user identity and group
+resolution in the authentication mechanisms.
+
+SharePoint local group resolution support with GSA 6.10.4.G.22 is limited
+to HTTP Based NTLM and Connector authentication. All authentication
+mechanisms work with GSA 6.12 and higher. Flex AuthZ support in the
+connector works only with GSA 6.14 and higher. ACL inheritance and Deny
+permission, and crawling user profiles for Expert Search work only with GSA
+7.0 and higher. All the other connector features will continue to work on
+GSA 7.0.14.G.114, 7.0.14.G.84, 6.14.0.G.28, and 6.12.0.G.30.
+
+Manually upgrade an existing connector and Google Services for SharePoint
+------------------------------------------------------------------------
+The steps to manually upgrade an existing connector or a Google Services for SharePoint can be found at http://code.google.com/p/google-enterprise-connector-sharepoint/wiki/ManualInstallation.
+
+Platform Support
+------------------
+The connector can be installed and run on both 32-bit and 64-bit Windows
+and Linux environments.
+
+--Microsoft Windows Server 2008 R2
+--Microsoft Windows Server 2008
+--Microsoft Windows Server 2003
+--Red Hat Enterprise Linux 5
+
+Note: This release has been tested against blank form templates and sample form templates provided by Microsoft Office InfoPath 2007.
+
+GSA Support:
+---------------------
+This connector version has been certified against 6.12.0.G.30, 6.14.0.G.28,
+and 7.0.14.G.114.
+
+
 Release 3.0.6, March 27, 2013
 =============================
 
@@ -609,7 +701,7 @@ This patch contains fix for the following issues.
 --Issue 5596005 SharePoint connector should correctly resolve the user's special group 'NT AUTHORITY\authenticated users'
 --Issue 5883396 Direct user membership of SharePoint groups is not working
 --Issue 5923376 SharePoint Connector goes into infinite loop and encounters StackOverflowError resolving groups with the same CN but different DNs
---Issue 5963073 Sharepoint connector doesn't differentiate between commonName, sAMAccountName and user userPrincipalName
+--Issue 5963073 SharePoint connector doesn't differentiate between commonName, sAMAccountName and user userPrincipalName
 --Issue 6253811 List items with "ows__ModerationStatus" attribute is always marked as unpublished document and not properly fed.
 --Issue 6341529 SharePoint Connector goes into infinite loop and encounters StackOverflowError with cyclically nested groups.
 
