--- a/projects/adgroups/RELEASE_NOTES
+++ b/projects/adgroups/RELEASE_NOTES
@@ -10,6 +10,53 @@ main documentation.
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
 
+Release 3.0.8, May 31, 2013
+===========================
+
+Introduction
+------------
+This is a maintenance release that improves quality without adding any
+new functionality. Users of previous releases are encouraged to upgrade.
+
+This connector replaces functionality previously provided by the
+SharePoint connector. This connector can be used automatically in
+conjunction with the SharePoint connector as a drop-in replacement for
+the previous functionality, or used separately with other connectors
+or content sources.
+
+Summary of Changes
+------------------
+This release contains fixes for the following issues:
+
+--Issue 8429292 AD Groups connector crashes if it encounters a group with a
+                multiple of 1500 members.
+
+--Issue 8300059 Performance improved for SharePoint group resolution query
+                if an index is created for column members.memberid.
+
+--Issue 7417736 Resolving BUILTIN groups from domain controller may provide
+                unintentional access. Local BUILTIN groups such as Users
+                and Administrators from the file share may be included in
+                ACLs, but the groups are resolved against the domain
+                controller's BUILTIN groups of the same name. There is now
+                a configuration property to disable group lookup for these
+                groups.
+
+Version Compatibility
+---------------------
+Connector instances created using versions 3.0.0 through 3.0.6 may be
+used with this version. This version works with Connector Manager
+version 3.0.0 and above. Versions lower than 3.0.0 of the Connector
+Manager will not work correctly with this version of the connector.
+
+For optimal performance, if you are upgrading from a previous 3.0.x
+version, Google recommends dropping the database tables and resetting the
+traversal for your connector instances after the upgrade. When using the
+default H2 database, you can simply delete the connector_manager.h2.db
+file under Tomcat/webapps/connector-manager/WEB-INF/connector_manager.db
+while Tomcat is stopped.
+
+
 Release 3.0.6, Mar 27, 2013
 ===========================
 
@@ -65,6 +112,7 @@ traversal for your connector instances after the upgrade. When using the
 default H2 database, you can simply delete the connector_manager.h2.db
 file under Tomcat/webapps/connector-manager/WEB-INF/connector_manager.db
 while Tomcat is stopped.
+
 
 Release 3.0.4, Nov 19, 2012
 ===========================
