--- a/projects/sharepoint/RELEASE_NOTES
+++ b/projects/sharepoint/RELEASE_NOTES
@@ -9,7 +9,7 @@ The following sections describe the release in detail and provide information th
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
 
-Release 3.2.0-M3, June 27, 2013
+Release 3.2.0, July 15, 2013
 ===============================
 
 Introduction
@@ -26,27 +26,52 @@ For a summary of the new features, see the Guide to Release 3.0:
 
 http://www.google.com/support/enterprise/static/gsa/docs/admin/connector_30/sharepoint_guide/
 
-Java SE 5.0 is no longer supported. Java 6 or later is required.
+Java SE 5.0 is no longer supported. Java 6 or later is required. 
+
+SharePoint 2003 and WSS 2.0 are no longer supported. Support added for
+SharePoint 2013.
+
+The Google Services for SharePoint (GSS) component has been renamed to 
+Connector Services for SharePoint in Google Search Appliance.
+Some occurrences of the old name may still appear, but refer to the 
+same component.
 
 This release contains fixes for the following issues:
+
+--Issue 9401354 Users in web application policy with claims-based 
+                mode are not correctly resolved.
+				
+--Issue 9366291 AD domain groups were not resolved correctly with Claims 
+                Authentication. The connector returned SIDs instead of 
+                group names.
 
 --Issue 9417474 IIS returns 400 errors when sending too large HTTP headers.
 
 --Issue 8538403 By sending delete record for unpublished documents,
                 connector broke the ACL chain for child items.
-
---Issue 8467118 Performance issue when renaming sharepoint folders prevents
+                
+--Issue 8467118 Performance issue when renaming SharePoint folders prevents
                 the connector from completing traversal.
-
+                
 --Issue 8357746 If the SystemAccount is not available when retrieving ACLs,
                 use the current user's token instead.
-
+                
 --Issue 8325341 If site collection administrators group cannot be resolved
                 in GetAcl request the connector will get stuck in a loop.
+                
+--Issue 8317771 Added a sharepoint:httpstatuscode property to documents
+                containing the HTTP response code returned while retrieving
+                document content. This can be used with the SkipDocumentFilter
+                to skip documents with specific error codes, 
+                such as 404 or 500.
+                
+--Issue 6732717 Add support for SharePoint anonymous content.
 
---Issue 6732717 Add support for Sharepoint anonymous content.
+--Issue 6553141 The reWriteDisplayUrlUsingAliasMappingRules and 
+                reWriteRecordUrlUsingAliasMappingRules properties do not 
+                work in versions 2.8 and above.
 
---Issue 6395086 Sharepoint connector late binding does not work with
+--Issue 6395086 SharePoint connector late binding does not work with
                 claims-based authentication. The connector only supports
                 claims-based authentication with Windows authentication.
 
